# masters_second_semester_software_engineering_methodology

./: .gitignore  lab1.docx  lab1.md  lab2.docx  lab3.docx  lab4.docx  report.typ  report_example.docx
lab1/: fetch_prs.py  main.ipynb  main.py  pr_classes.py  Панченко_Сергій_ІП_51_мн_1.typ
lab2/: .gitignore  lab2.md
lab2/task/: Cargo.toml  Панченко_Сергій_ІП_51мн.odt
lab2/task/src/: main.rs
lab3/: Cargo.toml  lab3.md  refs.bib  Панченко_Сергій_ІП_51_мн_3.typ
lab3/graphql/: pr_query.graphql  repository_query.graphql
lab4/: deepseek.md  deepseek.py  devstral.md  devstral.py  lab4.md  promt.txt  qwen3.md  qwen3.py  refs.bib  Панченко_Сергій_ІП_51_мн_4.typ
