[package]
name = "lab3"
version = "0.1.0"
edition = "2024"

[dependencies]
graphql_client = "0.16"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
plotters = "0.3.7"
